syntax = "proto3";

option csharp_namespace = "GPSDistance";

package Distancer;

service Distancer {
  rpc CalculateDistance (DistancerRequest) returns (DistancerResponse);
}

message DistancerRequest {
  message Point {
    string city = 1;
    double latitude = 2;
    double longitude = 3;
  }
  Point point1 = 1;
  Point point2 = 2;
  Point point3 = 3; // Opcjonalne
}

message DistancerResponse {
  double distance = 1;
}